cabal-version: 2.0
name: url-bytes
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license: MIT
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com
-- copyright:
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  ghc-options: -Wall -O2
  exposed-modules: 
      Url
      Url.Unsafe
  other-modules:
      Url.Rebind
  -- other-extensions:
  build-depends: 
      base >=4.12.0.0 && <5
    , byteslice >=0.2.1 && <0.3
    , primitive
    , bytesmith >=0.3.6 && <0.4
    , template-haskell >=2.15.0.0 && <2.17.0.0
    , integer-gmp
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
      HUnit
    , tasty
    , base
    , tasty-hunit
    , url-bytes
    , byteslice
    , primitive
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
      base
    , byteslice
    , gauge
    , primitive
    , url-bytes
    , uri-bytestring
    , bytestring
    , deepseq
    , primitive
    , weigh
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
